@@ -1,4 +1,4 @@
 DIST biber-1.4.tar.gz 1961252 SHA256 ddc81837347dd310331746f3b2b7896fc87be3a3143a429386cd5e33b565ce45 SHA512 18b2f353c8cac2af10a5f6fd2d2feba8056223d6baef6c71e65e94f9641b86fc8288ec5cb27a0247cdd190f216e7466eaea5e0e91fd734addd50675f6a085a30 WHIRLPOOL ddedee3b110daad9f17ebc3619ce103e313a4f514a027aa68ab24fa5da450aa2ce2423ae7aef988fbc46a3588b202a52e5e2739037bbc8f520605b6441f8298d
-EBUILD biber-1.4.ebuild 1095 SHA256 04c860c2a70854719b553f3c36f6eb87ddd03fb6fadbb573a1851799ae8d946d SHA512 a0caed666168a25196b15715f7421af327f02ed9132b74318b21fe888468e32fbceca2a9b139914dff8d036fc98b2429d068f710527061e48bf33fa563242eec WHIRLPOOL 656cb22d858a2e0d5bba1a92a193fb7d5f433f1330f398120e6bd50feb2b49d9ee63e397947b860a648d6311bc1a1dbf7dc8e3545668e96022bd4da52b2b592c
-MISC ChangeLog 455 SHA256 c7589940435397c50d50659b1c315b9c835125e84191b7141ead7bd429914656 SHA512 02052533d8f59d85782c4dcbffcc3b7242912dcdba33890d642d8868f9a7a3383bfbfe38588c0837e2efc77d9cdab4fc2a5239cf5686128184dd1e7d4c12fca8 WHIRLPOOL bb4ade972e607a68e370e25590ebbf1e56d8d9860fd626ee2334ccec37afe624ba704eec9094d3bdca57775628dd40a0f247cb0760f9f9c6d737f98b30c5f943
+EBUILD biber-1.4.ebuild 1174 SHA256 2c2f1b1830e490dfe6a9bde4bb71eca6647da1785286eefd61256e49333ccf91 SHA512 7c7f35fb591b4c697bbaad41251e9b7af6d8fac8cdbd6cc064d97525dc233d8942d519db93e3781bbd9d6359be9056af0e6266a22c975d3ed727e360318f10dd WHIRLPOOL 6cccd27bb3597be4416e57acd385f223c032896c81b23bfcd6f3e27f1de1fb7ca8bce62c5abf0b910ed564d2d8dc08ebf5cbd68831a30e3ad22e8d2f526fd8bf
+MISC ChangeLog 574 SHA256 89a239d3d8552a4823e99b84ea4e72d66680f4353de8d2a940cb3c1797db7a62 SHA512 799f6b2c2b73d9a4477a958222391b5572d2dcbf44f51e7a0ccd586f36b0bf88717fa5cd25999534111501115a8ae80d7c1385d32759eab19f327f903602aa0a WHIRLPOOL bb4a67fb5f17b8855866362d678802aa7e7e81e83898ccfb5d76e4c31f549a71f9277815f04dfaee663da76545e3dc8ef8478c368a3e029f06b109fb23082f4e
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
