@@ -1,3 +1,6 @@
+  01 Jan 2013; Manuel Rüger <gentoo@rueg.eu> biber-1.4.ebuild:
+  dev-tex/biber: Fix dependencies, all tests work now
+
 *biber-1.4 (29 Nov 2012)
 
   29 Nov 2012;  <mrueg@gentoo.org> +biber-1.4.ebuild, -biber-1.3.ebuild:
